--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@heroicons/react": "^1.0.6",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.6.5",
