--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "postcss": "^8.4.16",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.1.8",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "4.7.4"
