--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
+    "firebase": "^9.9.3",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
