--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
